test/suites/fail-lower/L-021.pol
data String { Foo }
let error: String { "foo" }
